# osmo-bsc-nat

./: .gitignore  .gitreview  AUTHORS  Makefile.am  README.md  configure.ac  osmoappdesc.py
contrib/: jenkins.sh  osmo-bsc-nat.spec.in
contrib/systemd/: Makefile.am  osmo-bsc-nat.service
debian/: changelog  control  copyright  osmo-bsc-nat.install  rules
doc/examples/: Makefile.am
doc/examples/osmo-bsc-nat/: osmo-bsc-nat.cfg
doc/manuals/: Makefile.am  osmobscnat-usermanual-docinfo.xml  osmobscnat-usermanual.adoc  osmobscnat-vty-reference.xml  regen_doc.sh
doc/manuals/chapters/: overview.adoc
include/osmocom/: Makefile.am
include/osmocom/bsc_nat/: Makefile.am  bsc.h  bsc_nat.h  bsc_nat_fsm.h  bssap.h  logging.h  msc.h  subscr_conn.h  subscr_conn_fsm.h  vty.h
src/: Makefile.am
src/osmo-bsc-nat/: Makefile.am  bsc.c  bsc_nat.c  bsc_nat_fsm.c  bssap.c  bssap_conn.c  logging.c  main.c  msc.c  msc_fsm.c  subscr_conn.c  subscr_conn_fsm.c  vty.c
tests/: Makefile.am  ctrl_test_runner.py  osmo-bsc-nat.vty
